--- a/manifests/h/HydrologicEngineeringCenter/HEC-DSSVue/3.4.15/HydrologicEngineeringCenter.HEC-DSSVue.installer.yaml
+++ b/manifests/h/HydrologicEngineeringCenter/HEC-DSSVue/3.4.15/HydrologicEngineeringCenter.HEC-DSSVue.installer.yaml
@@ -14,8 +14,9 @@ AppsAndFeaturesEntries:
   Publisher: Hydrologic Engineering Center
   InstallerType: msi
 Installers:
-- Architecture: x86
+- Architecture: neutral
   InstallerUrl: https://www.hec.usace.army.mil/software/hec-dssvue/downloads/HEC-DSSVue_3415_Setup.exe
   InstallerSha256: 38C6FA383135C048475289320AC6089F3FC1476DD420BD0128F89E493B303CD0
 ManifestType: installer
 ManifestVersion: 1.10.0
+
