--- a/manifests/h/HMCL/HMCL/Stable/3.9.1/HMCL.HMCL.Stable.locale.en-US.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/3.9.1/HMCL.HMCL.Stable.locale.en-US.yaml
@@ -16,7 +16,7 @@ Tags:
 - javafx
 - minecraft
 - minecraft-launcher
-ReleaseNotesUrl: https://docs.hmcl.net/changelog/dev.html#HMCL-3.9.1
+ReleaseNotesUrl: https://docs.hmcl.net/changelog/stable.html#HMCL-3.9.1
 Documentations:
 - DocumentLabel: Documentation
   DocumentUrl: https://docs.hmcl.net
