--- a/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.installer.yaml
+++ b/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.installer.yaml
@@ -1,12 +1,11 @@
-PackageIdentifier: shikhar.seleniuminit
-PackageVersion: 1.0.0
 InstallerType: exe
 InstallerSwitches:
   Silent: ""
   SilentWithProgress: ""
 Installers:
   - Architecture: x64
-    InstallerUrl: https://github.com/shikhar-batham/selenium-init-cli/releases/download/v1.0.0/install-selenium-init.bat
-    InstallerSha256: 129530229C821F0A66C9ADFCD1CB269939E9A88CCCF8BB329C47B7D11C54812B
-ManifestType: installer
-ManifestVersion: 1.6.0
+    InstallerUrl: https://github.com/shikhar-batham/selenium-init-cli/releases/download/v1.0.0/install.ps1
+    InstallerSha256: 2A7AA091CA363E0D2A0B7CF0AA77524E30EBBCED6F6081DCA3141DADE16154A9
+    InstallerSwitches:
+      Silent: -NoProfile -ExecutionPolicy Bypass -File install.ps1
+      SilentWithProgress: -NoProfile -ExecutionPolicy Bypass -File install.ps1
