rename publisher from Shikhar to shikhar

--- a/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.locale.en-US.yaml
+++ b/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.locale.en-US.yaml
@@ -1,7 +1,7 @@
 PackageIdentifier: shikhar.seleniuminit
 PackageVersion: 1.0.0
 PackageLocale: en-US
-Publisher: Shikhar
+Publisher: shikhar
 PackageName: Selenium Init CLI
 License: MIT
 ShortDescription: Create Selenium Java automation framework in seconds
