--- a/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.installer.yaml
+++ b/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.installer.yaml
@@ -1,11 +1,13 @@
-InstallerType: exe
-InstallerSwitches:
-  Silent: ""
-  SilentWithProgress: ""
+PackageIdentifier: shikhar.seleniuminit
+PackageVersion: 1.0.0
+InstallerType: ps1
+InstallModes:
+  - silent
 Installers:
   - Architecture: x64
     InstallerUrl: https://github.com/shikhar-batham/selenium-init-cli/releases/download/v1.0.0/install.ps1
-    InstallerSha256: 2A7AA091CA363E0D2A0B7CF0AA77524E30EBBCED6F6081DCA3141DADE16154A9
+    InstallerSha256: 2A7AA091CA3658D02A0B7C0FAA77524E3DEBBCEDE6F6B1DCA314DADE16154A9
     InstallerSwitches:
       Silent: -NoProfile -ExecutionPolicy Bypass -File install.ps1
-      SilentWithProgress: -NoProfile -ExecutionPolicy Bypass -File install.ps1
+ManifestType: installer
+ManifestVersion: 1.6.0
