--- a/manifests/p/Plex/Plex/1.112.0.359/Plex.Plex.locale.en-US.yaml
+++ b/manifests/p/Plex/Plex/1.112.0.359/Plex.Plex.locale.en-US.yaml
@@ -13,7 +13,7 @@ PackageName: Plex
 PackageUrl: https://www.plex.tv/
 License: Freemium, GPL-2.0
 LicenseUrl: https://www.plex.tv/about/privacy-legal/plex-terms-of-service
-Copyright: Copyright © 2023 Plex
+Copyright: Copyright © 2025 Plex
 CopyrightUrl: https://www.plex.tv/about/privacy-legal/plex-copyright-policy
 ShortDescription: Plex is a global streaming media service and a client–server media player platform, made by Plex, Inc.
 Moniker: plex
@@ -26,5 +26,8 @@ Tags:
 - streaming
 - video
 - video-streamer
+- plexforwindows
+- plex-for-windows
+- xp9cdqw6ml4nqn
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
