Added 3 tags：Adobe.CreativeCloud version 6.8.0.821

--- a/manifests/a/Adobe/CreativeCloud/6.8.0.821/Adobe.CreativeCloud.locale.en-US.yaml
+++ b/manifests/a/Adobe/CreativeCloud/6.8.0.821/Adobe.CreativeCloud.locale.en-US.yaml
@@ -11,5 +11,9 @@ PackageUrl: https://creativecloud.adobe.com/
 License: Proprietary
 Copyright: © 2019-2025 Adobe. All rights reserved.
 ShortDescription: Get all 20+ creative apps including Photoshop, Illustrator, and Premiere Pro.
+Tags:
+- adobecreativeclouddesktop
+- adobe-creative-cloud-desktop
+- xpdlpkwg9sw2wd
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
