--- a/manifests/a/Adobe/Acrobat/Reader/64-bit/25.001.20997/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
+++ b/manifests/a/Adobe/Acrobat/Reader/64-bit/25.001.20997/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
@@ -7,7 +7,7 @@ PackageLocale: en-US
 Publisher: Adobe
 Author: Adobe Inc.
 PackageName: Adobe Acrobat Reader (64-bit)
-PackageUrl: https://www.adobe.com/acrobat/pdf-reader.html
+# PackageUrl: https://www.adobe.com/acrobat/pdf-reader.html
 License: Proprietary
 Copyright: Copyright © 1984-2026 Adobe. All rights reserved.
 ShortDescription: The free global standard for reliably viewing, printing, signing, and commenting on PDF documents.
