--- a/manifests/d/DrygvalArtyom/DelAfterReboot/1.0.0/DrygvalArtyom.DelAfterReboot.locale.en-US.yaml
+++ b/manifests/d/DrygvalArtyom/DelAfterReboot/1.0.0/DrygvalArtyom.DelAfterReboot.locale.en-US.yaml
@@ -4,10 +4,10 @@
 PackageIdentifier: DrygvalArtyom.DelAfterReboot
 PackageVersion: 1.0.0
 PackageLocale: en-US
-Publisher: Drygval Artyom
+Publisher: DrygvalArtyom
 PublisherUrl: https://github.com/Artyomka628
 PublisherSupportUrl: https://github.com/Artyomka628/DelAfterReboot/issues
-Author: Artyom Drygval
+Author: DrygvalArtyom
 PackageName: DelAfterReboot
 PackageUrl: https://github.com/Artyomka628/DelAfterReboot
 License: Apache-2.0
@@ -30,3 +30,4 @@ Icons:
   IconSha256: 3bbafb0c22a86c4ba93e546bc11db2497eb23fedef44b81c093c8a51159007d8
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
