--- a/manifests/d/DevToys-app/DevToys/2.0-preview.9/DevToys-app.DevToys.locale.en-US.yaml
+++ b/manifests/d/DevToys-app/DevToys/2.0-preview.9/DevToys-app.DevToys.locale.en-US.yaml
@@ -1,5 +1,5 @@
-# Created using wingetcreate 1.6.1.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.6.0.schema.json
+# Created using wingetcreate 1.10.0.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: DevToys-app.DevToys
 PackageName: DevToys
@@ -27,4 +27,4 @@ Tags:
   - hash
   - image
 ManifestType: defaultLocale
-ManifestVersion: 1.6.0
+ManifestVersion: 1.10.0
