General maintenance：Adobe.Acrobat.Reader.64-bit version 25.001.20997 (#328859)

--- a/manifests/a/Adobe/Acrobat/Reader/64-bit/25.001.20997/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
+++ b/manifests/a/Adobe/Acrobat/Reader/64-bit/25.001.20997/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
@@ -7,8 +7,9 @@ PackageLocale: en-US
 Publisher: Adobe
 Author: Adobe Inc.
 PackageName: Adobe Acrobat Reader (64-bit)
+# PackageUrl: https://www.adobe.com/acrobat/pdf-reader.html
 License: Proprietary
-Copyright: Copyright © 1984-2025 Adobe. All rights reserved.
+Copyright: Copyright © 1984-2026 Adobe. All rights reserved.
 ShortDescription: The free global standard for reliably viewing, printing, signing, and commenting on PDF documents.
 Description: Adobe Acrobat Reader software is the free, trusted global standard for viewing, printing, signing, sharing, and annotating PDFs. It's the only PDF viewer that can open and interact with all types of PDF content – including forms and multimedia.
 Moniker: acrobatreader
@@ -16,10 +17,16 @@ Tags:
 - annotate
 - annotation
 - comment
-- ebook
+- ebooks
+- e-books
 - pdf
 - read
 - reader
 - viewer
+- adobeacrobatreaderdc
+- adobe-acrobat-reader-dc
+- adobereader
+- adobe-reader
+- xpdp273c0xhqh2
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
