I'm going to regret this so much.

--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.en-US.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.en-US.yaml
@@ -13,7 +13,7 @@ ShortDescription: Do you want to run apps? The runtime includes everything you n
 Description: |-
   Do you want to run apps? The runtime includes everything you need to run existing apps/programs built with .NET Framework. Not necessarily to be confused with «Microsoft .NET Runtime».
 
-  Normally the runtime is installed by default with all versions of Windows 11. This package is thus primarily intended for people on Windows 10 or who have had their default runtime installations be corrupted in some way.
+  Normally the runtime is installed by default with all x64 versions of Windows 11. This package is thus primarily intended for ARM64 versions, people on Windows 10, and people who have had their default runtime installations be corrupted in some way.
 Tags:
 - .net
 - dotnet
@@ -25,6 +25,7 @@ Tags:
 - .netframeworkruntime
 - .net-framework-runtime
 - netfx4
+- wminet_utils.dll
 PrivacyUrl: https://www.microsoft.com/privacy/privacystatement
 PackageUrl: https://dotnet.microsoft.com/en-us/download/dotnet-framework/net481
 LicenseUrl: https://www.microsoft.com/en-us/legal/terms-of-use
