--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.installer.yaml
@@ -11,5 +11,7 @@ Installers:
 - Architecture: neutral
   InstallerUrl: https://download.microsoft.com/download/4/b/2/cd00d4ed-ebdd-49ee-8a33-eabc3d1030e3/NDP481-x86-x64-AllOS-ENU.exe
   InstallerSha256: C0CA2E0C9CD18A24A0A77369A13FAE2C2C4E8BC83355DD24E5DDC00F9D791FE3
+UnsupportedOSArchitectures:
+- x64
 ManifestType: installer
 ManifestVersion: 1.12.0
