--- a/manifests/i/Indeepsoft/SystemDateChanger/1.3.6/Indeepsoft.SystemDateChanger.locale.en-US.yaml
+++ b/manifests/i/Indeepsoft/SystemDateChanger/1.3.6/Indeepsoft.SystemDateChanger.locale.en-US.yaml
@@ -5,6 +5,7 @@ PackageVersion: 1.3.6
 PackageLocale: en-US
 Publisher: InDeep Software
 PackageName: SystemDateChanger
+PackageUrl: https://indeepsoft.ly.ro/apps/SystemDateChanger.html
 License: Proprietary
 ShortDescription: System date and time changer for Windows. Temporarily change the system date, including to any year from 2000 to 2099.
 Tags:
