--- a/manifests/g/Ginkgo/TimeTravel/2.0.38/Ginkgo.TimeTravel.locale.en-US.yaml
+++ b/manifests/g/Ginkgo/TimeTravel/2.0.38/Ginkgo.TimeTravel.locale.en-US.yaml
@@ -7,7 +7,7 @@ Publisher: Ginkgo LLC
 PackageUrl: https://www.serialporttool.com/GK/time-travel/
 PackageName: Time Travel
 License: Proprietary (Freeware)
-ShortDescription: A free tool to change the computer clock's speed. It can override the current computer clock with any time value, including any year from 1753 to 8907 (but can't keep the changes after exiting). It can also change the running speed of the computer clock.
+ShortDescription: A free tool to change the computer clock's speed. It can override the current computer clock with any time value, including any year from 1753 to 8907 (but can't keep the changes after exiting). It can also change the running speed of the computer clock
 Tags:
 - time-travel
 - systemdate
