New version: SoftPerfect.RAMDisk version 26.1 (#328933)

--- a/manifests/s/SoftPerfect/RAMDisk/26.1/SoftPerfect.RAMDisk.locale.en-US.yaml
+++ b/manifests/s/SoftPerfect/RAMDisk/26.1/SoftPerfect.RAMDisk.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: SoftPerfect.RAMDisk
-PackageVersion: "25.12"
+PackageVersion: "26.1"
 PackageLocale: en-US
 Publisher: SoftPerfect Pty Ltd
 PublisherUrl: https://www.softperfect.com/
@@ -13,7 +13,7 @@ PackageName: SoftPerfect RAM Disk
 PackageUrl: https://www.softperfect.com/products/ramdisk/
 License: Proprietary
 LicenseUrl: https://www.softperfect.com/company/terms.htm
-Copyright: © 2009-2025 SoftPerfect Pty Ltd
+Copyright: © 2009-2026 SoftPerfect Pty Ltd
 CopyrightUrl: https://www.softperfect.com/company/terms.htm
 ShortDescription: Increase computer performance and SSD lifespan
 Description: |-
@@ -41,16 +41,12 @@ Tags:
 - ramdisk
 - temp
 ReleaseNotes: |-
-  - Added: Dynamic memory allocation. It allocates RAM on-demand as files are written, rather than upfront.
-  - Added: Automatic TRIM support for NTFS and exFAT to release memory when files are deleted.
-  - Added: Manual volume type for defining volumes without automatic mounting at startup or logon.
-  - Added: Graphical bar showing RAM disk allocation and system memory usage in real-time.
-  - Improved: Console application now waits for drive accessibility after mount/unmount operations.
-  - Fixed: FAT32 format calculation that could cause an infinite loop.
-  - Fixed: Orphaned volume GUID entries after unmounting direct I/O volumes.
-  - Fixed: Various race conditions during driver shutdown and volume deletion.
-  - Removed: "Mount as Removable" and "Wipe on Dismount" options.
-  - Removed: Paging file support.
+  - Added: MB/GB unit selector in the Add Disk and Create Image dialogs.
+  - Added: Parallel I/O processing for improved throughput on multi-core systems.
+  - Added: SIMD-optimised memory operations using SSE, AVX2, or AVX-512 where available.
+  - Added: Lifetime statistics tracking showing total data processed, maximum speed, and estimated SSD wear saved.
+  - Improved: Memory is always securely zeroed before release back to the system.
+  - Improved: Driver installation uses the modern INF-based approach, requiring only one reboot when upgrading.
 ReleaseNotesUrl: https://www.softperfect.com/products/changelog.php?product_id=6
 PurchaseUrl: https://www.softperfect.com/order/?product=ramdisk
 Documentations:
@@ -59,4 +55,4 @@ Documentations:
 - DocumentLabel: Beginner's Guide
   DocumentUrl: https://www.softperfect.com/articles/how-to-boost-computer-performance-with-ramdisk/
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
