iTop.iTopVPN version 7.2.0.6796 (#328952)

--- a/manifests/i/iTop/iTopVPN/7.2.0.6796/iTop.iTopVPN.locale.en-US.yaml
+++ b/manifests/i/iTop/iTopVPN/7.2.0.6796/iTop.iTopVPN.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: iTop.iTopVPN
-PackageVersion: 7.1.0.6723
+PackageVersion: 7.2.0.6796
 PackageLocale: en-US
 Publisher: iTop Inc.
 PublisherUrl: https://www.itopvpn.com/
@@ -16,12 +16,12 @@ Copyright: Copyright © iTop Inc. All rights reserved.
 CopyrightUrl: https://www.itopvpn.com/terms/
 ShortDescription: FREE VPN from iTop Secures Your Online Privacy - iTop VPN
 ReleaseNotes: |-
-  v7.1 (2025-11-17)
-  - Automatic connection supports more scenarios
-  - Added support for boosting Steam games
-  - Optimized the auto-login process and fixed some occasional login failures
-  - Better compatibility with Windows 11 version 25H2
-  - Improved interface to better adapted to 4K screen displays
+  v7.2 (2026-01-07)
+  - Improved the VPN stability in strictly blocked regions 
+  - Optimized servers for smoother P2P downloading 
+  - Fixed a minor bug with dedicated IP usage 
+  - Enhanced Ads Block to block more ads 
+  - Improved user interface to better adapt to 4K screens 
   - Fixed all known bugs
 PurchaseUrl: https://www.itopvpn.com/purchase/
 Documentations:
