IObit.DriverBooster version 13.2.0.184 (#328953)

--- a/manifests/i/IObit/DriverBooster/13.2.0.184/IObit.DriverBooster.locale.en-US.yaml
+++ b/manifests/i/IObit/DriverBooster/13.2.0.184/IObit.DriverBooster.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: IObit.DriverBooster
-PackageVersion: 13.1.0.171
+PackageVersion: 13.2.0.184
 PackageLocale: en-US
 Publisher: IObit
 PublisherUrl: https://www.iobit.com/
@@ -22,12 +22,11 @@ Tags:
 - updater
 - booster
 ReleaseNotes: |
-  v13.1 (2025-11-11)
-  - Supported updating drivers for more new devices, including AMD Ryzen AI 5 330
-  - Upgraded graphics card drivers to improve game performance, such as ARC Raiders, Battlefield 6, Europa Universalis V, Football Manager 26, Jurassic World Evolution 3, Pax Dei, The Outer Worlds 2, and Vampire: The Masquerade - Bloodlines 2
-  - Fully supported driver updates for Windows 11 25H2
-  - Fixed occasional compatibility issues with Windows 11 Arm64
-  - Fixed known bugs
+  v13.2 (2026-01-08)
+  - Added support for more devices, including AMD Radeon AI PRO R9600D/R9700S
+  - Supported updating more game drivers to improve game performance, such as Counter-Strike 2, Assassin's Creed Valhalla, and Dying Light: The Beast  
+  - Supported updating more AI drivers for better AI performance
+  - Fixed known issues
 Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://www.iobit.com/faq.php
