New version: Superace.UPDF version 2.1.2.0 (2.1.2.0) (#328985)

--- a/manifests/s/Superace/UPDF/2.1.2.0/Superace.UPDF.locale.en-US.yaml
+++ b/manifests/s/Superace/UPDF/2.1.2.0/Superace.UPDF.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: Superace.UPDF
-PackageVersion: 2.1.1.0
+PackageVersion: 2.1.2.0
 PackageLocale: en-US
 Publisher: Superace Software Technology Co., Ltd.
 PublisherUrl: https://superace.com/
@@ -13,7 +13,7 @@ PackageName: UPDF
 PackageUrl: https://updf.com/
 License: Proprietary
 LicenseUrl: https://updf.com/license-agreement/
-Copyright: Copyright © 2025 Superace Software Technology Co., Ltd. All rights reserved.
+Copyright: Copyright © 2026 Superace Software Technology Co., Ltd. All rights reserved.
 CopyrightUrl: https://updf.com/license-agreement/
 ShortDescription: Edit, annotate, convert and AI chat with PDF anytime, anywhere!
 Description: UPDF is a powerful PDF software that enables you to easily view, annotate, edit, convert, OCR, and organize PDF files. Its intuitive design allows users to perform tasks effortlessly, even without specialized skills. With advanced functionalities aimed at enhancing user experience, UPDF serves as an invaluable tool for business professionals, students, and anyone requiring PDF document manipulation. Integrated with AI technology, UPDF now offers even more robust capabilities, including summarization, translation, and explanation of PDFs.
@@ -32,13 +32,8 @@ Tags:
 - reader
 - viewer
 ReleaseNotes: |-
-  - Supports recognition of scanned and signed document types.
-  - UPDF AI on the homepage supports skin theme adaptation.
-  - Annotations support custom line types, endpoint styles, and cloud shapes.
-  - Custom stamps support setting author information.
-  - Optimized the appearance of circular stamps.
-  - Supports creating PDF from HTML.
-  - Supports triple-clicking to select an entire line of text.
+  - Supports recognition of PDF/A document types.
+  - Supports creating PDFs from Outlook.
   - Fixed known issues and improved stability.
 ReleaseNotesUrl: https://updf.com/whats-new/
 PurchaseUrl: https://updf.com/pricing-individuals/
@@ -48,4 +43,4 @@ Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://updf.com/updf-faqs/
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
