--- a/manifests/s/Superace/UPDF/2.1.2.0/Superace.UPDF.locale.zh-CN.yaml
+++ b/manifests/s/Superace/UPDF/2.1.2.0/Superace.UPDF.locale.zh-CN.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Superace.UPDF
-PackageVersion: 2.1.1.0
+PackageVersion: 2.1.2.0
 PackageLocale: zh-CN
 Publisher: Superace Software Technology Co., Ltd.
 PublisherUrl: https://superace.com/
@@ -13,7 +13,7 @@ PackageName: UPDF
 PackageUrl: https://www.updf.cn/
 License: 专有软件
 LicenseUrl: https://www.updf.cn/license-agreement/
-Copyright: Copyright © 2025 赛博爱思（上海）软件科技有限公司 保留所有权利。
+Copyright: Copyright © 2026 赛博爱思（上海）软件科技有限公司 保留所有权利。
 CopyrightUrl: https://www.updf.cn/license-agreement/
 ShortDescription: 新一代 AI 智能 PDF 编辑器
 Description: Windows 版本 UPDF 软件是一款简洁好用的桌面端 PDF 软件，可帮助您轻松查看、注释和管理 PDF 文件。UPDF 的界面设计使您无需任何技能即可灵活地执行任务。它也是商务专业人士、学生和任何需要处理 PDF 文档的人的优质选择。与人工智能技术相结合，UPDF 现在提供了更强大的功能，包括 AI 总结 PDF、AI 翻译 PDF、AI 解释 PDF 等等。
@@ -31,13 +31,8 @@ Tags:
 - 阅读
 - 阅读器
 ReleaseNotes: |-
-  - 支持识别扫描文档及签名文档类型。
-  - 首页 UPDF AI 支持皮肤主题适配。
-  - 注释支持自定义线型、端点样式及云朵形状。
-  - 自定义图章支持设置作者信息。
-  - 优化圆形图章外观。
-  - 支持从 HTML 创建 PDF。
-  - 支持三击选中整行文字。
+  - 支持识别 PDF/A 文档类型。
+  - 支持从 Outlook 中创建 PDF。
   - 修复已知问题并提升稳定性。
 ReleaseNotesUrl: https://www.updf.cn/whats-new/
 PurchaseUrl: https://checkout.updf.cn/updf
@@ -47,4 +42,4 @@ Documentations:
 - DocumentLabel: 常见问题
   DocumentUrl: https://www.updf.cn/updf-faqs/
 ManifestType: locale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
