New version: SoftPerfect.NetWorx version 26.1 (#329010)

--- a/manifests/s/SoftPerfect/NetWorx/26.1/SoftPerfect.NetWorx.locale.en-US.yaml
+++ b/manifests/s/SoftPerfect/NetWorx/26.1/SoftPerfect.NetWorx.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: SoftPerfect.NetWorx
-PackageVersion: "25.12"
+PackageVersion: "26.1"
 PackageLocale: en-US
 Publisher: SoftPerfect Pty Ltd
 PublisherUrl: https://www.softperfect.com/
@@ -13,7 +13,7 @@ PackageName: NetWorx
 PackageUrl: https://www.softperfect.com/products/networx/
 License: Proprietary
 LicenseUrl: https://www.softperfect.com/company/terms.htm
-Copyright: © 2016-2025 SoftPerfect Pty Ltd
+Copyright: © 2016-2026 SoftPerfect Pty Ltd
 CopyrightUrl: https://www.softperfect.com/company/terms.htm
 ShortDescription: Bandwidth monitoring and data usage reports for Windows, macOS and Linux
 Description: |-
@@ -41,12 +41,11 @@ Tags:
 - network
 - traffic
 ReleaseNotes: |-
-  - Added: Custom message text field for notifications.
-  - Added: "Both" (AND) condition for traffic notifications.
-  - Added: Y-axis labels and grid display in taskbar widget.
-  - Fixed: Windows shutdown and hibernation commands in notification actions.
-  - Fixed: Speed testing that stopped working.
-  - Fixed: Notification threshold checking incorrect direction for upload-only rules.
+  - Added: Taskbar widget display options for rates, graph and labels.
+  - Added: Lifetime statistics for uptime, speed and usage in the About window.
+  - Improved: Speed test rate calculation accuracy.
+  - Fixed: Potential access violation when quitting during speed test.
+  - Updated: Speed test to handle new infrastructure response format.
 ReleaseNotesUrl: https://www.softperfect.com/products/changelog.php?product_id=2
 PurchaseUrl: https://www.softperfect.com/order/?product=nwx
 Documentations:
@@ -55,4 +54,4 @@ Documentations:
 - DocumentLabel: How-to Guide
   DocumentUrl: https://www.softperfect.com/articles/how-to-monitor-and-manage-internet-connection-with-networx/
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
