--- a/manifests/m/mpv/net/7.1.2.0/mpv.net.locale.en-US.yaml
+++ b/manifests/m/mpv/net/7.1.2.0/mpv.net.locale.en-US.yaml
@@ -24,8 +24,9 @@ Tags:
 - video
 - video-player
 ReleaseNotes: |-
-  - .NET Desktop Runtime 10.0
-  - Changelog
-ReleaseNotesUrl: https://github.com/mpvnet-player/mpv.net/releases/tag/v7.1.2.0
+  - libmpv updated to v0.41 2026-01-09.
+  - Some adjustments to recent mpv changes.
+  - The Japanese and Turkish translations were updated. Thanks to the translators!
+ReleaseNotesUrl: https://github.com/mpvnet-player/mpv.net/blob/HEAD/docs/changelog.md#v7120-2026-01-09
 ManifestType: defaultLocale
 ManifestVersion: 1.12.0
