--- a/manifests/m/Microsoft/msmpi/10.1.12498.52/Microsoft.msmpi.installer.yaml
+++ b/manifests/m/Microsoft/msmpi/10.1.12498.52/Microsoft.msmpi.installer.yaml
@@ -7,14 +7,14 @@ InstallerType: exe
 InstallerSwitches:
   Silent: -unattend
   SilentWithProgress: -unattend
+AppsAndFeaturesEntries:
+  - DisplayName: Microsoft MPI
+    InstallerType: msi
+    ProductCode: '{8499ACD3-C1E3-45AB-BF96-DA491727EBE1}'  
+UpgradeBehavior: uninstallPrevious    
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.microsoft.com/download/7/2/7/72731ebb-b63c-4170-ade7-836966263a8f/msmpisetup.exe
   InstallerSha256: 47443829114d8d8670f77af98939fe876d33eceb35d0ce4e0e85efeec4d87213
-  AppsAndFeaturesEntries:
-  - Publisher: Microsoft Corporation
-    DisplayName: Microsoft MPI
-    InstallerType: msi
-    ProductCode: '{8499ACD3-C1E3-45AB-BF96-DA491727EBE1}'
 ManifestType: installer
 ManifestVersion: 1.12.0
