--- a/manifests/m/Microsoft/msmpi/10.1.12498.52/Microsoft.msmpi.installer.yaml
+++ b/manifests/m/Microsoft/msmpi/10.1.12498.52/Microsoft.msmpi.installer.yaml
@@ -2,15 +2,15 @@
 
 PackageIdentifier: Microsoft.msmpi
 PackageVersion: 10.1.12498.52
+ReleaseDate: 2025-02-27
 MinimumOSVersion: 10.0.0.0
 InstallerType: exe
 InstallerSwitches:
   Silent: -unattend
   SilentWithProgress: -unattend
 AppsAndFeaturesEntries:
-  - DisplayName: Microsoft MPI
-    InstallerType: msi
-    ProductCode: '{8499ACD3-C1E3-45AB-BF96-DA491727EBE1}'  
+- ProductCode: '{8499ACD3-C1E3-45AB-BF96-DA491727EBE1}'  
+  InstallerType: msi 
 UpgradeBehavior: uninstallPrevious    
 Installers:
 - Architecture: x64
