--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.en-US.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.en-US.yaml
@@ -26,6 +26,7 @@ Tags:
 - .net-framework-runtime
 - netfx4
 - wminet_utils.dll
+- ndp481
 PrivacyUrl: https://www.microsoft.com/privacy/privacystatement
 PackageUrl: https://dotnet.microsoft.com/en-us/download/dotnet-framework/net481
 LicenseUrl: https://www.microsoft.com/en-us/legal/terms-of-use
