--- a/manifests/k/kkamegawa/lastexecrecord/0.2.0/kkamegawa.lastexecrecord.local.en-us.yaml
+++ b/manifests/k/kkamegawa/lastexecrecord/0.2.0/kkamegawa.lastexecrecord.local.en-us.yaml
@@ -1,7 +1,7 @@
 # Created with komac v2.14.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
-PackageIdentifier: kkamegawa.lastexecuterecord
+PackageIdentifier: kkamegawa.lastexecrecord
 PackageVersion: 0.2.0
 PackageLocale: en-US
 Publisher: Kazushi Kamegawa
@@ -13,7 +13,7 @@ PackageUrl: https://github.com/kkamegawa/lastexecrecord
 License: MIT
 LicenseUrl: https://github.com/kkamegawa/lastexecrecord/blob/HEAD/LICENSE
 Copyright: Copyright (c) Kazushi kamegawa
-ShortDescription: 'LastExecRecord is simple launcher '
+ShortDescription: 'LastExecRecord is a simple launcher'
 Moniker: lastexecrecord
 ReleaseNotes: |-
   What's Changed
