Update documentation URL for EmEditor manual

--- a/manifests/e/Emurasoft/EmEditor/25.4.5/Emurasoft.EmEditor.locale.en-US.yaml
+++ b/manifests/e/Emurasoft/EmEditor/25.4.5/Emurasoft.EmEditor.locale.en-US.yaml
@@ -25,6 +25,6 @@ Tags:
 ReleaseNotesUrl: https://www.emeditor.com/blog/
 Documentations:
 - DocumentLabel: Manual
-  DocumentUrl: https://www.emeditor.com/doc/emeditor-pro-manual-en14.pdf
+  DocumentUrl: https://github.com/Emurasoft/emurasoft.github.io/releases/latest/download/emeditor.pdf
 ManifestType: defaultLocale
 ManifestVersion: 1.12.0
