--- a/manifests/e/Emurasoft/EmEditor/25.4.5/Emurasoft.EmEditor.locale.zh-CN.yaml
+++ b/manifests/e/Emurasoft/EmEditor/25.4.5/Emurasoft.EmEditor.locale.zh-CN.yaml
@@ -21,6 +21,6 @@ Tags:
 ReleaseNotesUrl: https://zh-cn.emeditor.com/blog/
 Documentations:
 - DocumentLabel: 使用手册
-  DocumentUrl: https://www.emeditor.com/doc/emeditor-pro-manual-en14.pdf
+  DocumentUrl: https://github.com/Emurasoft/emurasoft.github.io/releases/latest/download/emeditor.pdf
 ManifestType: locale
 ManifestVersion: 1.12.0
