Comment out arm64 user installer

--- a/manifests/h/HaiYing/AionUi/1.6.10/HaiYing.AionUi.installer.yaml
+++ b/manifests/h/HaiYing/AionUi/1.6.10/HaiYing.AionUi.installer.yaml
@@ -22,12 +22,12 @@ Installers:
   InstallerSha256: 3282E4577A4FADCBD9EB5EEE95CBE0EC30C422452676D9C807A424A1899448F3
   InstallerSwitches:
     Custom: /allusers
-- Architecture: arm64
-  Scope: user
-  InstallerUrl: https://github.com/iOfficeAI/AionUi/releases/download/v1.6.10/AionUi-1.6.10-win-arm64.exe
-  InstallerSha256: 7F04C4D1855FFAB2BA70176F9A71188248BD2BD8FD3A57B2E6E1D36A4781B7EA
-  InstallerSwitches:
-    Custom: /currentuser
+# - Architecture: arm64
+#   Scope: user
+#   InstallerUrl: https://github.com/iOfficeAI/AionUi/releases/download/v1.6.10/AionUi-1.6.10-win-arm64.exe
+#   InstallerSha256: 7F04C4D1855FFAB2BA70176F9A71188248BD2BD8FD3A57B2E6E1D36A4781B7EA
+#   InstallerSwitches:
+#     Custom: /currentuser
 - Architecture: arm64
   Scope: machine
   InstallerUrl: https://github.com/iOfficeAI/AionUi/releases/download/v1.6.10/AionUi-1.6.10-win-arm64.exe
