--- a/manifests/s/SoftSea/FreeVideoCutter/1.0/SoftSea.FreeVideoCutter.locale.en-US.yaml
+++ b/manifests/s/SoftSea/FreeVideoCutter/1.0/SoftSea.FreeVideoCutter.locale.en-US.yaml
@@ -14,7 +14,7 @@ License: Freeware
 LicenseUrl: https://www.softsea.com/terms-of-use.html
 Copyright: Copyright © 2006 - 2025 SoftSea.com. All rights reserved.
 ShortDescription: A free video utility to help you to cut and split your video files.
-Description: Free Video Cutter is a free video utility to help you to cut and split your video files into small size you can use it as a "video cutter", "video splitter" or "video clipper". Program can work with most video formats, such as MPEG 1/2, MPEG4, DivX, Xvid, AVI, WMV, Quicktime MOV, Flash video and more, the output video can have a good video quality. No need any professional IT stills, No need any knowledge about all kinds of video formats, it is so easy to use. Without any adware or spyware, this simple software is 100% clean and secure, and completely free.
+Description: Free Video Cutter is a free video utility to help you to cut and split your video files into small size you can use it as a "video cutter", "video splitter" or "video clipper". Program can work with most video formats, such as MPEG 1/2, MPEG4, DivX, Xvid, AVI, WMV, Quicktime MOV, Flash video and more, the output video can have a good video quality. No need any professional IT skills, No need any knowledge about all kinds of video formats, it is so easy to use. Without any adware or spyware, this simple software is 100% clean and secure, and completely free.
 Moniker: freevideocutter
 Tags:
 - cut
