New version: TRUSTSING.iDefender.EN version 5.3.0.0 (#329174)

--- a/manifests/t/TRUSTSING/iDefender/EN/5.3.0.0/TRUSTSING.iDefender.EN.locale.en-US.yaml
+++ b/manifests/t/TRUSTSING/iDefender/EN/5.3.0.0/TRUSTSING.iDefender.EN.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: TRUSTSING.iDefender.EN
-PackageVersion: 5.2.2.0
+PackageVersion: 5.3.0.0
 PackageLocale: en-US
 Publisher: iMonitorSDK
 PublisherUrl: https://trustsing.com/
@@ -10,7 +10,7 @@ Author: Shenzhen Chuangxin Changrong Network Co., Ltd.
 PackageName: iDefender
 PackageUrl: https://www.idefender.net/
 License: Proprietary
-Copyright: Copyright ©️ 2020-2025 TRUSTSING - All rights reserved.
+Copyright: Copyright ©️ 2020-2026 TRUSTSING - All rights reserved.
 ShortDescription: The Infinite Potential Host Intrusion Prevention System (HIPS)
 Description: |-
   iDefender is 5D (Process Defense, File Defense, Network Defense, Registry Defense, Enhance Defense) Endpoint Active Defense System based on scene mode, it provides you with the ability to fully control your computer. Using iDefender can help you prevent ransomware, defend advanced threads, intercepting exploits, hardening system, and protecting privacy.
@@ -21,18 +21,27 @@ Tags:
 - hips
 - security
 ReleaseNotes: |-
-  - Added automatic update support
-  - Added built-in rule: Privacy & Ad-Blocking DNS Guarding
-  - Added RegisterHotKey support for keylogging blocking
-  - Add a privacy policy link and telemetry data option
-  - Optimized file access (kernel mode) rules (does not block EA reading, reducing alerts)
-  - Optimized built-in rules, reducing false positives
-  - Fixed the issue of wow64 key not working in some registry protection sections
-  - Fixed the issue of direct raw disk access blocking not working
-  - Fixed the issue of YARA rules not working
-  - Fixed the issue of process information not being obtained in some RPC scenarios
-  - Fixed the issue of APC injection warnings constantly appearing in environments where Avast was installed.
-  - Retrained the antivirus engine
-ReleaseNotesUrl: https://www.idefender.net/changelog.html#_5-2-2-0
+  - Add Process Rule Template
+    - Supports Integrity Level Control
+    - Supports Privilege Control
+    - Supports Control Over 20+ Types of Behaviors
+    - Supports Advanced Behavior Control
+  - Add Transparent Proxy Template
+  - Add C2 Detection Support
+    - Supports Accurate Detection of SilverFox
+    - Supports Accurate Detection of BRC4
+  - Add Detection for Common Defense Evasion Techniques
+    - Stack Obfuscation Detection
+    - Stack Spoof Detection
+    - WFP Silent EDR Detection
+    - Direct RPC Call Detection
+    - Patch ETW Detection
+    - Patch AMSI Detection
+  - Advanced Template Supports Adding Firewall Events
+  - Advanced Template Supports Process Reputation Field
+  - Fixed Issue with Invalid Zooming
+  - Fixed Issue Where Real-Time Protection Failed Due to Custom Real-Time Protection
+  - Optimized Some User Experience Aspects
+ReleaseNotesUrl: https://www.idefender.net/changelog.html#_5-3-0-0
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
