--- a/manifests/m/Microsoft/DotNet/AspNetCore/3_1/3.1.32/Microsoft.DotNet.AspNetCore.3_1.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/AspNetCore/3_1/3.1.32/Microsoft.DotNet.AspNetCore.3_1.installer.yaml
@@ -42,6 +42,8 @@ Installers:
   ArchiveBinariesDependOnPath: true
   AppsAndFeaturesEntries:
   - DisplayName: Microsoft ASP.NET Core 3.1.32 - Shared Framework (ARM64)
+  InstallerSuccessCodes:
+  - -2147450751
 - Architecture: arm
   InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/aspnetcore/Runtime/3.1.32/aspnetcore-runtime-3.1.32-win-arm.zip
   InstallerSha256: 3da57a9cece26f894b13b423ef01ed41e2bf432377d67e333703eae403308f69
