--- a/manifests/n/NAVER/Whale/4.35.351.13/NAVER.Whale.installer.yaml
+++ b/manifests/n/NAVER/Whale/4.35.351.13/NAVER.Whale.installer.yaml
@@ -18,5 +18,6 @@ Installers:
 - Architecture: arm64
   InstallerUrl: https://installer-whale.pstatic.net/downloads/sa_installers/WhaleSetupARM64.exe
   InstallerSha256: 836dccbbd1ac538988de40b210b1f98e7d398cf6eb278daf7cc3b7f7c338031d
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
