--- a/manifests/o/otya128/winevdm/0.9.0/otya128.winevdm.installer.yaml
+++ b/manifests/o/otya128/winevdm/0.9.0/otya128.winevdm.installer.yaml
@@ -8,9 +8,9 @@ Dependencies:
   - PackageIdentifier: Microsoft.VCRedist.2015+.x86
 NestedInstallerType: portable
 NestedInstallerFiles:
-- RelativeFilePath: otvdm-v0.9.0/otvdm.exe
+- RelativeFilePath: otvdm-v0.9.0\otvdm.exe
   PortableCommandAlias: otvdm
-- RelativeFilePath: otvdm-v0.9.0/otvdmw.exe
+- RelativeFilePath: otvdm-v0.9.0\otvdmw.exe
   PortableCommandAlias: otvdmw
 ArchiveBinariesDependOnPath: true
 Installers:
