Hash Update: Zabbix.Agent.2 version 7.0.19 (Auto)

--- a/manifests/z/Zabbix/Agent/2/7.0.19/Zabbix.Agent.2.installer.yaml
+++ b/manifests/z/Zabbix/Agent/2/7.0.19/Zabbix.Agent.2.installer.yaml
@@ -1,5 +1,5 @@
-# Created using wingetcreate 1.10.3.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
+# Updated hash by Sundry.
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: Zabbix.Agent.2
 PackageVersion: 7.0.19
@@ -16,11 +16,11 @@ UpgradeBehavior: install
 Installers:
 - Architecture: x64
   InstallerUrl: https://cdn.zabbix.com/zabbix/binaries/stable/7.0/7.0.19/zabbix_agent2-7.0.19-windows-amd64-openssl.msi
-  InstallerSha256: 4FCEB4EFA79DE4C486EB6AE4EA3E60926F7A381E1318149B4F99BB6ACFD6F64C
+  InstallerSha256: 8806383af824f085464c9fc2b2c067febb0efcf34fc48ea95ba9310b56509c9c
   ProductCode: '{9B4187DA-AC74-41C1-AABF-8C166702C6E2}'
 - Architecture: x86
   InstallerUrl: https://cdn.zabbix.com/zabbix/binaries/stable/7.0/7.0.19/zabbix_agent2-7.0.19-windows-i386-openssl.msi
-  InstallerSha256: B069C87163A409710EB4EA701CC370B1F79176AFB28ACADF657A8B49AEF8FC7B
+  InstallerSha256: 1a1a9cba53ee81d25d3b176c34d8f17c3908ee49fcc999d5ee78fd8d08eaa4e9
   ProductCode: '{24800099-BD6C-46FC-996E-AA7F9B1F980A}'
 ManifestType: installer
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
