--- a/manifests/z/Zabbix/Agent/2/7.0.19/Zabbix.Agent.2.locale.en-US.yaml
+++ b/manifests/z/Zabbix/Agent/2/7.0.19/Zabbix.Agent.2.locale.en-US.yaml
@@ -1,5 +1,5 @@
-# Created using wingetcreate 1.10.3.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# Updated hash by Sundry.
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: Zabbix.Agent.2
 PackageVersion: 7.0.19
@@ -32,4 +32,4 @@ Tags:
 - zabbix
 - LTS
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
