--- a/manifests/k/KeepSolid/VPNUnlimited/9.4.1/KeepSolid.VPNUnlimited.installer.yaml
+++ b/manifests/k/KeepSolid/VPNUnlimited/9.4.1/KeepSolid.VPNUnlimited.installer.yaml
@@ -7,5 +7,6 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://geo.keepsolidcdn.com/soft/vpn/Win/VPN_Unlimited_v9.4.1.exe
   InstallerSha256: 812A3521070978FECBDC815441E4DEF863702B3ECCDAF51BA0C03D4DBB7C451B
+ElevationRequirement: elevationRequired  
 ManifestType: installer
 ManifestVersion: 1.12.0
