--- a/manifests/s/Soundux/Soundux/Portable/0.2.7/Soundux.Soundux.Portable.installer.yaml
+++ b/manifests/s/Soundux/Soundux/Portable/0.2.7/Soundux.Soundux.Portable.installer.yaml
@@ -10,5 +10,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/Soundux/Soundux/releases/download/0.2.7/soundux-0.2.7-windows-portable.exe
   InstallerSha256: 80E38C9E1D20A45E6CB96464E678A83C08E1468D9C2557862CF6A734E43E9D7A
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
