--- a/manifests/s/SunJary/NetAssistant/0.1.1/SunJary.NetAssistant.yaml
+++ b/manifests/s/SunJary/NetAssistant/0.1.1/SunJary.NetAssistant.yaml
@@ -6,3 +6,7 @@ PackageVersion: 0.1.1
 DefaultLocale: zh-CN
 ManifestType: version
 ManifestVersion: 1.10.0
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
+    MinimumVersion: 14.32.31326.0
