--- a/manifests/m/MCJack123/CraftOS-PC2/Portable/2.8.3/MCJack123.CraftOS-PC2.Portable.installer.yaml
+++ b/manifests/m/MCJack123/CraftOS-PC2/Portable/2.8.3/MCJack123.CraftOS-PC2.Portable.installer.yaml
@@ -17,5 +17,6 @@ Installers:
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.VCRedist.2015+.x64
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
