--- a/manifests/e/ECSoftware/SnipSVG/2.1.0/ECSoftware.SnipSVG.installer.yaml
+++ b/manifests/e/ECSoftware/SnipSVG/2.1.0/ECSoftware.SnipSVG.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.5.0 $debug=NVS1.CRLF.7-5-2.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
+# Created with YamlCreate.ps1 Dumplings Mod
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: ECSoftware.SnipSVG
-PackageVersion: 2.0.0
+PackageVersion: 2.1.0
 InstallerType: inno
 FileExtensions:
 - ipp
@@ -12,14 +12,14 @@ Installers:
 - Architecture: x64
   Scope: user
   InstallerUrl: https://www.helpandmanual.com/download/snipsvg-setup.exe
-  InstallerSha256: AC542E61D79729F17693B2E91F886031A8B698CADB83BF8BB53BCF27BC960270
+  InstallerSha256: D7E6BBA9C208283BB31AB08133C3958D872113B9D86BA221F98DB97848C75484
   InstallerSwitches:
     Custom: /CURRENTUSER
 - Architecture: x64
   Scope: machine
   InstallerUrl: https://www.helpandmanual.com/download/snipsvg-setup.exe
-  InstallerSha256: AC542E61D79729F17693B2E91F886031A8B698CADB83BF8BB53BCF27BC960270
+  InstallerSha256: D7E6BBA9C208283BB31AB08133C3958D872113B9D86BA221F98DB97848C75484
   InstallerSwitches:
     Custom: /ALLUSERS
 ManifestType: installer
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
