--- a/manifests/v/ValdikSS/GoodbyeDPI/0.2.3rc3/ValdikSS.GoodbyeDPI.installer.yaml
+++ b/manifests/v/ValdikSS/GoodbyeDPI/0.2.3rc3/ValdikSS.GoodbyeDPI.installer.yaml
@@ -19,5 +19,6 @@ Installers:
   NestedInstallerFiles:
   - RelativeFilePath: goodbyedpi-0.2.3rc3-2\x86\goodbyedpi.exe
     PortableCommandAlias: goodbyedpi86
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
