--- a/manifests/t/Tailscale/Tailscale/1.92.5/Tailscale.Tailscale.installer.yaml
+++ b/manifests/t/Tailscale/Tailscale/1.92.5/Tailscale.Tailscale.installer.yaml
@@ -9,6 +9,7 @@ InstallerSwitches:
 UpgradeBehavior: install
 Protocols:
 - tailscale
+ReleaseDate: 2026-01-06
 Installers:
 - Architecture: x86
   InstallerType: burn
