--- a/manifests/t/Tencent/TencentMeeting/3.41.1.433/Tencent.TencentMeeting.installer.yaml
+++ b/manifests/t/Tencent/TencentMeeting/3.41.1.433/Tencent.TencentMeeting.installer.yaml
@@ -24,6 +24,7 @@ FileExtensions:
 - wemtvidx
 - wxe1097d193e4320fd
 ProductCode: WeMeet
+ReleaseDate: 2026-01-07
 ElevationRequirement: elevatesSelf
 Installers:
 - Architecture: x86
