--- a/manifests/t/Tailscale/Tailscale/1.92.5/Tailscale.Tailscale.locale.en-US.yaml
+++ b/manifests/t/Tailscale/Tailscale/1.92.5/Tailscale.Tailscale.locale.en-US.yaml
@@ -22,7 +22,14 @@ Tags:
 - network
 - vpn
 - wireguard
-ReleaseNotesUrl: https://tailscale.com/changelog
+ReleaseNotes: |-
+  Linux
+  - Changed: State file encryption and hardware attestation keys are no longer enabled by default.
+  - Fixed: Failure to load hardware attestation keys no longer prevents the client from starting. This could happen when the TPM device is reset or replaced.
+  Windows
+  - Changed: State file encryption and hardware attestation keys are no longer enabled by default.
+  - Fixed: Failure to load hardware attestation keys no longer prevents the client from starting. This could happen when the TPM device is reset or replaced.
+ReleaseNotesUrl: https://tailscale.com/changelog/#2026-01-06-client
 PurchaseUrl: https://tailscale.com/pricing
 Documentations:
 - DocumentLabel: Docs
