Add ReleaseNotes (zh-CN)

--- a/manifests/q/QNAP/QVRProClient/2.8.2.1463/QNAP.QVRProClient.locale.zh-CN.yaml
+++ b/manifests/q/QNAP/QVRProClient/2.8.2.1463/QNAP.QVRProClient.locale.zh-CN.yaml
@@ -19,5 +19,14 @@ Tags:
 - 存储
 - 摄像头
 - 监控
+ReleaseNotes: |-
+  [重要事项]
+  - QVR Pro Client 安装套件未内嵌在 QVR Pro 中，若要安装 QVR Pro Client，请从 QNAP 网站下载最新的安装套件： https://www.qnap.com/go/utilities/surveillance
+  - QVR Smart Client 现在无须 QVR AI Pack 授权，但需要安装 CAYIN Media Viewer 或 CAYIN MediaSign Player。
+  [添加功能]
+  - 在 [查看画面] 中，现在可使用文件夹与文件夹群组来管理各查看画面。
+  [修复问题]
+  - 修正了使用日文的 QNAP ID 帐户时，会导致登录失败的问题。
+  - 修正了部分 Intel Core i3 和 Intel Xeon 机种上，会发生硬件加速失败的问题。
 ManifestType: locale
 ManifestVersion: 1.12.0
