--- a/manifests/k/KeeperSecurity/KeeperDesktop/17.5.0.0/KeeperSecurity.KeeperDesktop.locale.en-US.yaml
+++ b/manifests/k/KeeperSecurity/KeeperDesktop/17.5.0.0/KeeperSecurity.KeeperDesktop.locale.en-US.yaml
@@ -24,7 +24,7 @@ Tags:
 - protection
 - security
 - vault
-ReleaseNotesUrl: https://docs.keeper.io/en/release-notes/desktop/web-vault-+-desktop-app
+ReleaseNotesUrl: https://docs.keeper.io/en/release-notes/desktop/web-vault-+-desktop-app/vault-release-17.5.0
 PurchaseUrl: https://www.keepersecurity.com/pricing/personal-and-family.html
 ManifestType: defaultLocale
 ManifestVersion: 1.12.0
