--- a/manifests/k/KeeperSecurity/KeeperDesktop/17.5.0.0/KeeperSecurity.KeeperDesktop.installer.yaml
+++ b/manifests/k/KeeperSecurity/KeeperDesktop/17.5.0.0/KeeperSecurity.KeeperDesktop.installer.yaml
@@ -10,6 +10,7 @@ InstallerType: msix
 UpgradeBehavior: install
 Protocols:
 - keeper
+ReleaseDate: 2026-01-08
 PackageFamilyName: KeeperSecurityInc.KeeperPasswordManager_zwgt23r867e2p
 Installers:
 - Architecture: x86
