--- a/manifests/k/KeeperSecurity/KeeperDesktop/17.5.0.0/KeeperSecurity.KeeperDesktop.installer.yaml
+++ b/manifests/k/KeeperSecurity/KeeperDesktop/17.5.0.0/KeeperSecurity.KeeperDesktop.installer.yaml
@@ -11,6 +11,7 @@ UpgradeBehavior: install
 Protocols:
 - keeper
 PackageFamilyName: KeeperSecurityInc.KeeperPasswordManager_zwgt23r867e2p
+ReleaseDate: 2026-01-08
 Installers:
 - Architecture: x86
   InstallerUrl: https://download.keepersecurity.com/desktop_electron/packages/KeeperPasswordManager.msixbundle
