Fix installer URL to use Azure Blob Storage

--- a/manifests/c/CyberIntelSystems/CICB/2.3.2.38/CyberIntelSystems.CICB.installer.yaml
+++ b/manifests/c/CyberIntelSystems/CICB/2.3.2.38/CyberIntelSystems.CICB.installer.yaml
@@ -18,7 +18,7 @@ InstallerSwitches:
   SilentWithProgress: /SILENT /SUPPRESSMSGBOXES /NORESTART
 Installers:
 - Architecture: x64
-  InstallerUrl: https://portal.cyberintelsystems.com/downloads/?f=CICBv2-Win-v2.3.2.38.exe
+  InstallerUrl: https://cicbv2release.blob.core.windows.net/cicbv2-release/CICBv2-Win-v2.3.2.38.exe
   InstallerSha256: 0D2EA1BC1D497CB46D1FB5B2E6A20F2D5ACC597FD7BCE1CAFCBBA6447A73D76F
 ManifestType: installer
 ManifestVersion: 1.6.0
