--- a/manifests/b/Beeper/Beeper/4.2.455/Beeper.Beeper.locale.en-US.yaml
+++ b/manifests/b/Beeper/Beeper/4.2.455/Beeper.Beeper.locale.en-US.yaml
@@ -34,6 +34,21 @@ Tags:
 - telegram
 - twitter
 - whatsapp
+ReleaseNotes: |-
+  New
+  Translate messages with AI (subscribers only) — Right click a message to see translation options, change language suggestions under Settings > AI > General > Translation Languages
+  See all your Scheduled messages under All Chats > Scheduled (subscribers only)
+  Fixed & Improved
+  Double-clicking a zoomed-in image zooms back out, not further in
+  Improved emoji autofill sorting
+  Fixed instances where some links you send don’t auto-link
+  Fixed user mentions sometimes going missing after you edit a message
+  Fixed some inconsistencies with special characters you write vs what is sent on the native network
+  Fixed closing Beeper fullscreen on Mac sometimes showing a blank screen
+  Local Instagram - Ensure that a link is included when you receive a story shared with you, instead of only a preview image
+  Fixed Messenger direct chats started from Beeper not working correctly
+  Fixed more cases where WhatsApp direct chats would get split in two
+  Several other UX and stability improvements
 ReleaseNotesUrl: https://beeper.notion.site
 Documentations:
 - DocumentLabel: FAQ
