--- a/manifests/s/SoftSea/EPUBFileReader/2025-09/SoftSea.EPUBFileReader.locale.en-US.yaml
+++ b/manifests/s/SoftSea/EPUBFileReader/2025-09/SoftSea.EPUBFileReader.locale.en-US.yaml
@@ -14,7 +14,7 @@ License: Freeware
 LicenseUrl: https://www.softsea.com/terms-of-use.html
 Copyright: Copyright © 2006 - 2025 SoftSea.com. All rights reserved.
 ShortDescription: A free and simple EPUB file viewer.
-Description: EPUB File Reader is a free and simple EPUB file viewer, it can quickly open a EPUB document, let you view file content. Software has a friendly interface, and installation package is very small, it is very easy to use. At the best, it is a freeware and completely free to use. If you have a lot EPUB eBooks, this software is what you need.
+Description: EPUB File Reader is a free and simple EPUB file viewer, it can quickly open a EPUB document, let you view file content. Software has a friendly interface, and installation package is very small, it is very easy to use. At the best, it is a freeware and completely free to use. If you have a lot of EPUB eBooks, this software is what you need.
 Moniker: epubfilereader
 Tags:
 - book
