--- a/manifests/u/UNIkeEN/SJMCL/0.7.0/UNIkeEN.SJMCL.locale.zh-CN.yaml
+++ b/manifests/u/UNIkeEN/SJMCL/0.7.0/UNIkeEN.SJMCL.locale.zh-CN.yaml
@@ -20,33 +20,32 @@ Tags:
 - minecraft
 - 我的世界
 ReleaseNotes: |-
-  All the best 2026. 新年快乐 🎉
-  - 🔥 Support downloading and installing the OptiFine loader when creating an instance. #1149 #1288 @xunying123 @Reqwey @UNIkeEN
-  - 🔥 Add support for the Linux Arm64 platform. #1249 @pangbo13 @Minecrafter-Pythoner
-  - 🌟 Add LittleSkin as a built-in third-party authentication server. #1214 @tnqzh123
-  - 🌟 Add an OpenGL compatibility notice on first launch on Windows on Arm platforms. #1225 #1263 @UNIkeEN
-  - 🌟 Add a layered, pseudo-3D visual effect to player avatars. #1227 @Reqwey
-  - 🌟 Support replacing instance icons with custom images. #1228 #1244 @UNIkeEN
-  - 🌟 Support importing special modpacks without a mod loader. #1235 @Reqwey
-  - 🌟 When no instances or accounts exist, allow quickly adding an instance or account directly from the launch page. #1269 @UNIkeEN @RobertZhang0901 @funkthesky-ops
-  - 🌟 Add dynamic multi-language support to the titles of the game log and crash report windows. #1282 @UNIkeEN
-  - 🐛 Filter out certain invalid filenames before downloading resources. #1229 @UNIkeEN
-  - 🐛 Fix an issue where some external instances failed to launch due to a missing java_version field in the version metadata file. #1242 @UNIkeEN
-  - 🐛 Fix an issue on macOS and Linux where the add Java dialog could not select the target file. #1248 @UNIkeEN
-  - 🐛 Fix an issue for game version 26.1-snapshot.1 where the corresponding NeoForge version could not be fetched from official sources and was incorrectly shown as a stable release. #1260 @UNIkeEN
-  - 🐛 Fix display issues in the level data modal. #1264 @UNIkeEN
-  - 🐛 Fix an issue on Windows where the launcher window position could not be recognized or captured by QQNT. #1270 @HsxMark
-  - 🐛 Fix display and logic issues related to loader version numbers in mod loader switching and instance creation modals. #1287 @UNIkeEN
-  - 🐛 Fix an issue on Linux where custom launcher background image could not be displayed. #1292 @UNIkeEN @KodateMitsuru
-  - 🐛 Fix issues on macOS and Linux where certain game or resource directories could not be opened. #1292 @UNIkeEN @Stya-hr
-  - 🛠 For Simplified Chinese users, set the “Automatically set instance language” option to enabled by default. #1234 @Nova-Squ1
-  - 🛠 Adjust the storage locations for launcher logs and game logs. #1238 @UNIkeEN
-  - 🛠 Compute and include the launcher's own SHA-256 hash when sending statistics. #1267 @pangbo13
-  - 💄 Refactor parts of the codebase to improve code style and maintainability. #1208 #1224 #1247 @UNIkeEN @hbz114514
-  - 🇫🇷 Update French translations for the launcher UI. #1236 @HsxMark
-  - 📦 Replace the bundle format for the non-portable version on Windows, switching from MSI to NSIS. #1257 @pangbo13
-  - Workflow:
-    - Automatically update the MCMod data cache. #1250 @SundayChen
+  - 🔥 支持在创建实例时下载与安装 Optifine 加载器。#1149 #1288 @xunying123 @Reqwey @UNIkeEN
+  - 🔥 支持 Linux Arm64 平台。#1249 @pangbo13 @Minecrafter-Pythoner
+  - 🌟 添加 LittleSkin 为预置的第三方认证服务器。#1214 @tnqzh123
+  - 🌟 在 Windows on Arm 平台首次运行时，添加 OpenGL 兼容性提示。#1225 #1263 @UNIkeEN
+  - 🌟 为角色头像添加分层立体效果。#1227 @Reqwey
+  - 🌟 支持使用自定义图像更换实例图标。#1228 #1244 @UNIkeEN
+  - 🌟 支持导入无模组加载器的特殊整合包。#1235 @Reqwey
+  - 🌟 当没有实例或角色时，支持从启动界面快速添加实例或角色。#1269 @UNIkeEN @RobertZhang0901 @funkthesky-ops
+  - 🌟 为游戏日志、游戏崩溃窗口的标题栏添加动态多语言支持。#1282 @UNIkeEN
+  - 🐛 在下载资源前过滤部分非法文件名。#1229 @UNIkeEN
+  - 🐛 修复部分外部实例因版本信息文件 java_version 字段缺失而无法启动的问题。#1242 @UNIkeEN
+  - 🐛 修复 macOS 与 Linux 平台下，添加 Java 对话框无法选择目标文件的问题。#1248 @UNIkeEN
+  - 🐛 修复对于 26.1-snapshot.1 版本游戏，无法从官方源获取对应 NeoForge 版本、错误显示为正式版的问题。#1260 @UNIkeEN
+  - 🐛 修复世界数据对话框的显示问题。#1264 @UNIkeEN
+  - 🐛 修复 Windows 平台下，启动器窗口位置无法被 QQNT 识别并截图的问题。#1270 @HsxMark
+  - 🐛 修复更换模组加载器、创建实例等对话框中加载器版本号显示及相关逻辑的问题。#1287 @UNIkeEN
+  - 🐛 修复 Linux 平台下，自定义启动器壁纸无法显示的问题。#1292 @UNIkeEN @KodateMitsuru
+  - 🐛 修复 macOS 与 Linux 平台下，部分游戏或资源目录无法打开的问题。#1292 @UNIkeEN @Stya-hr
+  - 🛠 对于简体中文用户，”自动设置实例语言”设置项调整为默认开启。#1234 @Nova-Squ1
+  - 🛠 调整启动器日志与游戏日志的存储目录。#1238 @UNIkeEN
+  - 🛠 在发送统计数据时，计算并发送启动器本身的 SHA-256。#1267 @pangbo13
+  - 💄 重构部分代码以提升代码风格与可维护性。#1208 #1224 #1247 @UNIkeEN @hbz114514
+  - 🇫🇷 更新启动器界面文本的法语翻译。#1236 @HsxMark
+  - 📦 更换 Windows 平台下非便携版本的打包方式，由 MSI 更换为 NSIS。#1257 @pangbo13
+  - 工作流：
+    - 自动更新 MCMod 数据缓存。#1250 @SundayChen
 ReleaseNotesUrl: https://github.com/UNIkeEN/SJMCL/releases/tag/v0.7.0
 Documentations:
 - DocumentLabel: 文档
