--- a/manifests/t/Tenable/NessusAgent/11.0.3.20014/Tenable.NessusAgent.installer.yaml
+++ b/manifests/t/Tenable/NessusAgent/11.0.3.20014/Tenable.NessusAgent.installer.yaml
@@ -3,7 +3,6 @@
 
 PackageIdentifier: Tenable.NessusAgent
 PackageVersion: 11.0.3.20014
-InstallerLocale: en-US
 InstallerType: msi
 Scope: machine
 InstallerSwitches:
@@ -12,9 +11,7 @@ UpgradeBehavior: install
 ProductCode: '{E7AAFF8D-3905-4B70-826B-3132E092871E}'
 ReleaseDate: 2026-01-09
 AppsAndFeaturesEntries:
-- DisplayName: Nessus Agent (x64)
-  ProductCode: '{E7AAFF8D-3905-4B70-826B-3132E092871E}'
-  UpgradeCode: '{87CA4190-75C0-4DCC-84DD-DB195F745868}'
+- UpgradeCode: '{87CA4190-75C0-4DCC-84DD-DB195F745868}'
 InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles(x86)%/Tenable/Nessus Agent/.'
 Installers:
