--- a/manifests/t/Tenable/NessusAgent/11.0.3.20014/Tenable.NessusAgent.locale.en-US.yaml
+++ b/manifests/t/Tenable/NessusAgent/11.0.3.20014/Tenable.NessusAgent.locale.en-US.yaml
@@ -19,6 +19,19 @@ ShortDescription: Nessus Agents give you visibility into additional IT assets - 
 Tags:
 - security
 - vulnerability
+ReleaseNotes: |-
+  New Features
+  The following are new features included in Tenable Agent 11.0.3:
+  - Added support for plugin download concurrency settings in Tenable Vulnerability Management. Tenable is scheduled to release full support for this feature by the end of January 2026.
+  Security Updates
+  The following are security updates included in Tenable Agent 11.0.3:
+  - Fixed a vulnerability in the Tenable Agent Windows tray application that allowed a standard user to gain system privileges during installation or uninstallation.
+    For more information, see the Tenable Product Security Advisory.
+  Upgrade Notes
+  - You can upgrade to the latest version of Tenable Agent from any previously supported version.
+  - If your upgrade path skips versions of the Tenable Agent, Tenable recommends reviewing the release notes for all skipped versions to learn about new features and bug fixes.
+  - If you are connecting to Tenable Vulnerability Management through Tenable Nessus scanners, Tenable Agents, Tenable Web App Scanning scanners, or Tenable Network Monitors (NNM) located in mainland China, you must connect through sensor.cloud.tenablecloud.cn instead of sensor.cloud.tenable.com.
+ReleaseNotesUrl: https://docs.tenable.com/release-notes/Content/agent/agent.htm
 Documentations:
 - DocumentLabel: Documentation
   DocumentUrl: https://docs.tenable.com/agent.htm
