--- a/manifests/q/QNAP/QVRProClient/2.8.2.1463/QNAP.QVRProClient.locale.en-US.yaml
+++ b/manifests/q/QNAP/QVRProClient/2.8.2.1463/QNAP.QVRProClient.locale.en-US.yaml
@@ -5,16 +5,16 @@ PackageIdentifier: QNAP.QVRProClient
 PackageVersion: 2.8.2.1463
 PackageLocale: en-US
 Publisher: QNAP Systems, Inc.
-PublisherUrl: https://www.qnap.com/
+# PublisherUrl: https://www.qnap.com/
 PublisherSupportUrl: https://service.qnap.com/
-PrivacyUrl: https://www.qnap.com/en/legal/qnap-privacy-policy
+# PrivacyUrl: https://www.qnap.com/en/legal/qnap-privacy-policy
 Author: QNAP Systems, Inc.
 PackageName: QNAP QVR Pro Client
-PackageUrl: https://www.qnap.com/en/utilities/surveillance
+# PackageUrl: https://www.qnap.com/en/utilities/surveillance
 License: Proprietary
-LicenseUrl: https://www.qnap.com/en/legal/qnap-website-terms-of-use
+# LicenseUrl: https://www.qnap.com/en/legal/qnap-website-terms-of-use
 Copyright: © 2026 QNAP Systems, Inc. All rights reserved.
-CopyrightUrl: https://www.qnap.com/en/legal/qnap-website-terms-of-use
+# CopyrightUrl: https://www.qnap.com/en/legal/qnap-website-terms-of-use
 ShortDescription: A new client application for QNAP surveillance system, supporting QVR Pro, QVR Elite and QVP series surveillance appliances.
 Description: QVR Pro Client is a new client application for QNAP surveillance system, supporting QVR Pro, QVR Elite and QVP series surveillance appliances. You can browse multiple channels at once, enjoying efficient and easy management of surveillance recordings.
 Tags:
