--- a/manifests/v/VaclavJedlicka/ProfiCAD/13.4.2/VaclavJedlicka.ProfiCAD.locale.en-US.yaml
+++ b/manifests/v/VaclavJedlicka/ProfiCAD/13.4.2/VaclavJedlicka.ProfiCAD.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: VaclavJedlicka.ProfiCAD
-PackageVersion: 13.3.9
+PackageVersion: 13.4.2
 PackageLocale: en-US
 Publisher: Václav Jedlička
 PublisherUrl: https://www.proficad.com/
@@ -20,12 +20,7 @@ Tags:
 - cad
 - engineer
 - engineering
-ReleaseNotes: |-
-  Export to DWG format
-  A new feature allowing export to the DWG format has been added to the program.
-  Procedure:
-  In the main menu, select Outputs → Export to DXF or DWG. A dialog box will open; choose the desired format, DXF or DWG, and click the Export button.
-  This new feature makes collaboration with other CAD applications easier and simplifies sharing your schematics.
+ReleaseNotes: This update includes minor bug fixes and improves overall stability.
 ReleaseNotesUrl: https://www.proficad.com/news/news13.aspx
 PurchaseUrl: https://www.proficad.com/purchase.aspx
 Documentations:
@@ -34,4 +29,4 @@ Documentations:
 - DocumentLabel: Video Tutorials
   DocumentUrl: https://www.proficad.com/video-tutorials/
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
