--- a/manifests/s/SoftwareOK/DesktopOK/12.26/SoftwareOK.DesktopOK.locale.en-US.yaml
+++ b/manifests/s/SoftwareOK/DesktopOK/12.26/SoftwareOK.DesktopOK.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: SoftwareOK.DesktopOK
-PackageVersion: "12.25"
+PackageVersion: "12.26"
 PackageLocale: en-US
 Publisher: SoftwareOK
 PublisherUrl: https://www.softwareok.com/
@@ -13,14 +13,15 @@ PackageName: DesktopOK
 PackageUrl: https://www.softwareok.com/?seite=Freeware/DesktopOK
 License: Freeware
 LicenseUrl: https://www.softwareok.com/?seite=Freeware/DesktopOK/Eula
-Copyright: Copyright © 2006-2025 Nenad Hrg
+Copyright: Copyright © 2006-2026 Nenad Hrg
 ShortDescription: Save and restore the positions of the Windows 11, 10, ... Desktop Icons!
 Description: DesktopOK is a small but effective solution for user that have to change the screen resolution often. It is also good for windows users who often have to work with a projector on the notebook eg laptop or tablet-pc on all MS Windows! so the name is Desktop O.K. and not only Icon Save, the program has also other helpful functions for daily works on all windows os!
 Tags:
 - desktop
 ReleaseNotes: |-
-  - Further bug fixes due to new Windows features that affect desktop applications, including the Desktop OK app.
-  - Known general optimizations in DesktopOK.exe
+  - Testing and verification for the new Windows 11 update build
+  - Important language file updates
+  - Minor fixes in DesktopOK
 ReleaseNotesUrl: https://www.softwareok.com/?seite=Freeware/DesktopOK/History
 Documentations:
 - DocumentLabel: Manual
@@ -28,4 +29,4 @@ Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://www.softwareok.com/?seite=faq-DesktopOK&faq=0
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
