--- a/manifests/h/HMCL/HMCL/Stable/3.9.1/HMCL.HMCL.Stable.locale.en-US.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/3.9.1/HMCL.HMCL.Stable.locale.en-US.yaml
@@ -10,13 +10,13 @@ PublisherSupportUrl: https://github.com/HMCL-dev/HMCL/issues
 PackageName: Hello Minecraft! Launcher Stable
 PackageUrl: https://github.com/HMCL-dev/HMCL
 License: GPL-3.0
+LicenseUrl: https://github.com/HMCL-dev/HMCL/blob/HEAD/LICENSE
 Copyright: Copyright (C) 2026 huangyuhui
 ShortDescription: A Minecraft Launcher which is multi-functional, cross-platform and popular
 Tags:
 - javafx
 - minecraft
 - minecraft-launcher
-ReleaseNotesUrl: https://docs.hmcl.net/changelog/stable.html#HMCL-3.9.1
 Documentations:
 - DocumentLabel: Documentation
   DocumentUrl: https://docs.hmcl.net
