--- a/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.installer.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.installer.yaml
@@ -6,6 +6,7 @@ PackageVersion: 3.9.1
 InstallerType: portable
 Commands:
 - hmcl-stable
+ReleaseDate: 2025-12-21
 Installers:
 - Architecture: neutral
   InstallerUrl: https://github.com/HMCL-dev/HMCL/releases/download/v3.9.1/HMCL-3.9.1.exe
