Update: Waytech.CloudDrive2 version 1.0 (0.9.22)

--- a/manifests/w/Waytech/CloudDrive2/1.0/Waytech.CloudDrive2.locale.zh-CN.yaml
+++ b/manifests/w/Waytech/CloudDrive2/1.0/Waytech.CloudDrive2.locale.zh-CN.yaml
@@ -1,5 +1,5 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Waytech.CloudDrive2
 PackageVersion: "1.0"
@@ -13,7 +13,7 @@ PackageName: CloudDrive2
 PackageUrl: https://www.clouddrive2.com/download.html
 License: 专有软件
 LicenseUrl: https://www.clouddrive2.com/eula.html
-Copyright: © 2025 CloudDrive. All rights reserved.
+Copyright: © 2026 CloudDrive. All rights reserved.
 CopyrightUrl: https://www.clouddrive2.com/eula.html
 ShortDescription: CloudDrive 是一个强大的多云盘管理工具，为用户提供包含云盘本地挂载的一站式的多云盘解决方案。
 Description: |-
@@ -28,9 +28,9 @@ Tags:
 - 文件
 - 服务器
 ReleaseNotes: |-
-  1. 修复本地缓存总大小在某些情况下统计错误，甚至可能导致实际占用磁盘空间超过限制总大小的问题
-  2. 其它 bug 修复
-ReleaseNotesUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/tag/v0.9.21
+  1. 增加 aws S3 及兼容 S3 API 的对象存储支持
+  2. 其它性能优化
+ReleaseNotesUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/tag/0.9.22
 PurchaseUrl: https://www.clouddrive2.com/pricing.html
 ManifestType: locale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
