--- a/manifests/s/SoftSea/EPUBFileReader/2025-09/SoftSea.EPUBFileReader.installer.yaml
+++ b/manifests/s/SoftSea/EPUBFileReader/2025-09/SoftSea.EPUBFileReader.installer.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2025-09
 InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
-- RelativeFilePath: EPUB File Reader/epubfilereader.exe
+- RelativeFilePath: EPUB File Reader\epubfilereader.exe
   PortableCommandAlias: epubfilereader
 ReleaseDate: 2025-09-30
 ArchiveBinariesDependOnPath: true
