--- a/manifests/w/Waytech/CloudDrive2/1.0/Waytech.CloudDrive2.installer.yaml
+++ b/manifests/w/Waytech/CloudDrive2/1.0/Waytech.CloudDrive2.installer.yaml
@@ -10,10 +10,10 @@ ProductCode: '{6A67D75D-B097-4828-B0DA-9257E00ECEF4}_is1'
 ReleaseDate: 2026-01-11
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/download/0.9.22/CloudDrive2Setup-X64-0.9.22.exe
+  InstallerUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/download/v0.9.22/CloudDrive2Setup-X64-0.9.22.exe
   InstallerSha256: 690105B68E44812A97F67414F87D5E6436A9B9CE619AAE71D24B4728B215C1EC
 - Architecture: arm64
-  InstallerUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/download/0.9.22/CloudDrive2Setup-Arm64-0.9.22.exe
+  InstallerUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/download/v0.9.22/CloudDrive2Setup-Arm64-0.9.22.exe
   InstallerSha256: 5A33F40B6B3A6D0811B4DE9DECF670E416485B94488DA1E1943BF7C7C2063484
 ManifestType: installer
 ManifestVersion: 1.12.0
