Updated the license url.

--- a/manifests/i/ImageMagick/Q8/7.1.2.12/ImageMagick.Q8.locale.en-US.yaml
+++ b/manifests/i/ImageMagick/Q8/7.1.2.12/ImageMagick.Q8.locale.en-US.yaml
@@ -11,9 +11,9 @@ Author: ImageMagick Studio LLC
 PackageName: ImageMagick Q8
 PackageUrl: https://imagemagick.org
 License: Apache-2.0 Derivative
-LicenseUrl: https://imagemagick.org/script/license.php
+LicenseUrl: https://imagemagick.org/license/
 Copyright: (C) 1999 ImageMagick Studio LLC
-CopyrightUrl: https://imagemagick.org/script/license.php
+CopyrightUrl: https://imagemagick.org/license/
 ShortDescription: Use ImageMagick to create, edit, compose, or convert digital images
 Tags:
 - image
